--- a/src/variables.css
+++ b/src/variables.css
@@ -1,7 +1,7 @@
 :root {
   --white: #fff;
   --grey: #d4d4d4;
-  --primary-green-color: #66ff00;
+  --primary-green-color: #3a9200;
   --grid-container-padding: 16px;
   --header-height-mobile: 40px;
   --header-height-tablet: 80px;
